test/zinc_source/compile_errors/structs/09_anon_extra_field.zn
// expected-error: parameter 'point' expects a compatible 'struct\{x:i64\}' value

fn only_x(point: struct {
    x: i64
}) {
    return point.x
}

fn main() {
    point = struct {
        x: 1
        y: 2
    }
    print(only_x(point))
}
